# spike-dp-analysts-v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt_project/: .sqlfluff  README.md  dbt_project.yml  profiles.yml
dbt_project/macros/: assert_developer_prefix.sql  create_ordered_pipe_breakdown.sql  generate_schema_name.sql
dbt_project/models/: tesco_sources.yml  vm02_revenue_assurance_silver_sources.yml
dbt_project/models/finance_gold/: online_sales_transactions.sql  online_sales_transactions.yml  tesco_sales_transactions.sql  tesco_sales_transactions.yml
dbt_project/models/revenue_assurance_gold/: amount_spend_by_tax_code.sql  amount_spend_by_tax_code.yml  usage_event_charges_pivoted.sql  usage_event_charges_pivoted.yml  usage_event_charging_detail.sql  usage_event_charging_detail.yml
dbt_project/models/revenue_assurance_gold/blugem_ccs_usage_reconciliation/: blugem_ccs_usage_reconciliation.sql  blugem_ccs_usage_reconciliation.yml
dbt_project/tests/fixtures/revenue_assurance_gold/blugem_ccs_usage_reconciliation/: blugem_ccs_usage_reconciliation__expected.sql  blugem_usage__event_balance_update_cleaned.sql  blugem_usage__event_tax_cleaned.sql  blugem_usage__event_usage_quantity_cleaned.sql  blugem_usage__event_usage_root_cleaned.sql  intermediate_blugem_usage__expected.sql  intermediate_blugem_usage_balance__expected.sql  (+4 more)
dbt_project/tests/generic/: assert_single_value_per_group.sql  create_ordered_pipe_breakdown.sql
dbt_project/tests/revenue_assurance_gold/: blugem_ccs_usage_reconciliation_unit.yml
